--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ip-lookup-fraud-detection",
   "version": "1.0.0",
   "description": "An application for IP lookup and fraud detection using IPStack, IPQualityScore, and Supabase.",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Your Name",
   "license": "",
