--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "author": "Your Name",
+  "author": "group 52",
   "license": "",
   "dependencies": {
     "axios": "^1.4.0",                        
